# Generated by Django 5.2.4 on 2026-02-02 20:39

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('courses', '0003_course_is_active_course_updated_at_and_more'),
        ('tests', '0002_test_created_at_test_created_by_test_description_and_more'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('action', models.CharField(max_length=100, verbose_name='Действие')),
                ('object_type', models.CharField(blank=True, max_length=100, verbose_name='Тип объекта')),
                ('object_id', models.CharField(blank=True, max_length=100, verbose_name='ID объекта')),
                ('message', models.TextField(blank=True, verbose_name='Сообщение')),
                ('metadata', models.JSONField(blank=True, default=dict, verbose_name='Метаданные')),
                ('ip_address', models.GenericIPAddressField(blank=True, null=True, verbose_name='IP-адрес')),
                ('user_agent', models.CharField(blank=True, max_length=255, verbose_name='User-Agent')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата')),
                ('actor', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='audit_logs', to=settings.AUTH_USER_MODEL, verbose_name='Пользователь')),
            ],
            options={
                'verbose_name': 'Журнал аудита',
                'verbose_name_plural': 'Журнал аудита',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='BackupRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата')),
                ('status', models.CharField(choices=[('CREATED', 'Создано'), ('FAILED', 'Ошибка'), ('DELETED', 'Удалено')], default='CREATED', max_length=10, verbose_name='Статус')),
                ('file_path', models.CharField(blank=True, max_length=500, verbose_name='Путь к файлу')),
                ('size_bytes', models.BigIntegerField(blank=True, null=True, verbose_name='Размер (байт)')),
                ('checksum', models.CharField(blank=True, max_length=128, verbose_name='Контрольная сумма')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='backups', to=settings.AUTH_USER_MODEL, verbose_name='Создал')),
            ],
            options={
                'verbose_name': 'Резервная копия',
                'verbose_name_plural': 'Резервные копии',
            },
        ),
        migrations.CreateModel(
            name='Dashboard',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=255, verbose_name='Название')),
                ('config', models.JSONField(default=dict, verbose_name='Конфигурация')),
                ('is_shared', models.BooleanField(default=False, verbose_name='Общий доступ')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата создания')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Дата обновления')),
                ('owner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='dashboards', to=settings.AUTH_USER_MODEL, verbose_name='Владелец')),
            ],
            options={
                'verbose_name': 'Дашборд',
                'verbose_name_plural': 'Дашборды',
            },
        ),
        migrations.CreateModel(
            name='Report',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=255, verbose_name='Название')),
                ('report_type', models.CharField(choices=[('PROGRESS', 'Прогресс обучения'), ('COMPETENCY', 'Компетенции'), ('RESULTS', 'Результаты тестов'), ('ACTIVITY', 'Активность'), ('CUSTOM', 'Пользовательский')], default='PROGRESS', max_length=20, verbose_name='Тип отчёта')),
                ('filters', models.JSONField(blank=True, default=dict, verbose_name='Фильтры')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата создания')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Дата обновления')),
                ('owner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='reports', to=settings.AUTH_USER_MODEL, verbose_name='Автор')),
            ],
            options={
                'verbose_name': 'Отчёт',
                'verbose_name_plural': 'Отчёты',
            },
        ),
        migrations.CreateModel(
            name='ReportExport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('export_format', models.CharField(choices=[('PDF', 'PDF'), ('XLSX', 'Excel')], max_length=10, verbose_name='Формат')),
                ('status', models.CharField(choices=[('PENDING', 'В очереди'), ('READY', 'Готов'), ('FAILED', 'Ошибка')], default='PENDING', max_length=10, verbose_name='Статус')),
                ('file_path', models.CharField(blank=True, max_length=500, verbose_name='Путь к файлу')),
                ('generated_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата генерации')),
                ('report', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='exports', to='analytics.report', verbose_name='Отчёт')),
            ],
            options={
                'verbose_name': 'Экспорт отчёта',
                'verbose_name_plural': 'Экспорт отчётов',
            },
        ),
        migrations.CreateModel(
            name='TrainingEvent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('event_type', models.CharField(choices=[('ENROLLMENT_ASSIGNED', 'Назначен курс'), ('COURSE_STARTED', 'Начат курс'), ('COURSE_COMPLETED', 'Завершён курс'), ('PROGRAM_ASSIGNED', 'Назначена программа'), ('PROGRAM_COMPLETED', 'Завершена программа'), ('TEST_COMPLETED', 'Пройден тест'), ('TASK_SUBMITTED', 'Отправлено задание'), ('TASK_REVIEWED', 'Проверено задание')], max_length=30, verbose_name='Тип события')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата')),
                ('metadata', models.JSONField(blank=True, default=dict, verbose_name='Метаданные')),
                ('course', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='courses.course', verbose_name='Курс')),
                ('program', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='courses.learningprogram', verbose_name='Программа')),
                ('task', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='courses.task', verbose_name='Задание')),
                ('test', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='tests.test', verbose_name='Тест')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='training_events', to=settings.AUTH_USER_MODEL, verbose_name='Сотрудник')),
            ],
            options={
                'verbose_name': 'Событие обучения',
                'verbose_name_plural': 'События обучения',
                'ordering': ['-created_at'],
            },
        ),
    ]
